Closed Bug 1003837 Opened 10 years ago Closed 10 years ago

dumpHeap creates file named "null" if 1st argument is null

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: arai, Assigned: arai)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.9; rv:29.0) Gecko/20100101 Firefox/29.0 (Beta/Release)
Build ID: 20140421221237

Steps to reproduce:

Run jstests (especially js1_8/extensions/regress-378789.js) with debug build js shell.



Actual results:

File named "null" is created on current directory.



Expected results:

The result should be output to stdout instead of the file.
Blocks: 933810
OS: Mac OS X → All
Hardware: x86 → All
Comment on attachment 8415295 [details] [diff] [review]
Output dumpHeap result to stdout when 1st argument is null.

Review of attachment 8415295 [details] [diff] [review]:
-----------------------------------------------------------------

I guess passing undefined would work instead of null, but who cares.
Attachment #8415295 - Flags: review?(evilpies) → review+
Thank you for reviewing.
Could you push this patch to try server?
I'm going to push this today.
https://hg.mozilla.org/mozilla-central/rev/d0bd512f4df6
Assignee: nobody → arai_a
Status: UNCONFIRMED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: