Bug 1003837 - Output dumpHeap result to stdout when 1st argument is null. r=evilpies.